# segmentation_ros_msg

./: CMakeLists.txt  README.md  package.xml
msg/: SegmentationResult.msg
