if("$ENV{ROS_VERSION}" STREQUAL "1")
  cmake_minimum_required(VERSION 3.0.2)
  project(segmentation_ros_msg)

  find_package(catkin REQUIRED COMPONENTS
    std_msgs
    sensor_msgs
    message_generation
  )
  add_message_files(
    FILES
    SegmentationResult.msg
  )
  generate_messages(
    DEPENDENCIES std_msgs sensor_msgs
  )
  catkin_package(
    CATKIN_DEPENDS std_msgs message_runtime
  )

elseif("$ENV{ROS_VERSION}" STREQUAL "2")
  cmake_minimum_required(VERSION 3.5)
  project(segmentation_ros_msg)

  find_package(ament_cmake REQUIRED)
  find_package(rosidl_default_generators REQUIRED)
  find_package(std_msgs REQUIRED)
  find_package(sensor_msgs REQUIRED)

  rosidl_generate_interfaces(${PROJECT_NAME}
    "msg/SegmentationResult.msg"
    DEPENDENCIES std_msgs sensor_msgs
  )

  ament_package()

endif()
