<?xml version="1.0"?>
<package format="3">
  <name>segmentation_ros_msg</name>
  <version>0.0.0</version>
  <description>The segmentation_ros_msg package</description>

  <maintainer email="pash0302@gmail.com">psh</maintainer>

  <license>TODO</license>

  <build_depend>ros_environment</build_depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <depend condition="$ROS_VERSION == 1">std_msgs</depend>
  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>